# frustum

./: .gitignore  README
gl/: DemoDebug.props  DemoDebug_SDL.props  DemoRelease.props  DemoRelease_SDL.props  frustum_gl.sln
gl/src/01_ProjShadow/: 01_ProjShadow.vcxproj  01_ProjShadow.vcxproj.filters  loadjpeg.c  main.c  mathlib.c  mathlib.h
gl/src/02_ObjectLine/: 02_ObjectLine.vcxproj  main.c  mathlib.h
gl/src/02_ObjectLine/data/: model.3ds
gl/src/03_LightMap/: 03_LightMap.vcxproj  03_LightMap.vcxproj.filters  image.h  loadjpeg.c  loadtga.c  main.c  mathlib.c  mathlib.h  plane.c  plane.h
gl/src/03_LightMap/data/: effect.tga  marks.tga
gl/src/04_VolumeFog/: 04_VolumeFog.vcxproj  04_VolumeFog.vcxproj.filters  main.c
gl/src/04_VolumeFog/data/: ground.3ds
gl/src/05_3DModelViewer/: 05_3DModelViewer.vcxproj  05_3DModelViewer.vcxproj.filters  load3ds.c  loadjpeg.c  loadmd3.c  loadmdc.c  loadpng.c  main.c
gl/src/06_CubeMap/: 06_CubeMap.vcxproj  load3ds.c  main.c
gl/src/06_CubeMap/data/: mesh0.3ds  mesh1.3ds  mesh2.3ds  plane.3ds
gl/src/07_SkinnedMesh/: 07_SkinnedMesh.vcxproj  07_SkinnedMesh.vcxproj.filters  main.c
gl/src/07_SkinnedMesh/data/: sm.skin  sm.txt
gl/src/08_VertexProgram/: 08_VertexProgram.vcxproj  08_VertexProgram.vcxproj.filters  main.c  program.vp
gl/src/09_Terrain/: 09_Terrain.vcxproj  09_Terrain.vcxproj.filters  camera.c  camera.h  loadtga.c  main.c  map.h  mathlib.c  mathlib.h  terrain.c  terrain.h
gl/src/09_Terrain/data/: height.tga  shadow.tga
gl/src/09_Terrain/data/grass0/: grass.tga  grass_0.tga  grass_1.tga  grass_2.tga  grass_3.tga  grass_4.tga  grass_5.tga  grass_6.tga  grass_7.tga  grass_8.tga  grass_9.tga  grass_a.tga  grass_b.tga  grass_c.tga  grass_d.tga
gl/src/09_Terrain/data/grass1/: grass.tga  grass_0.tga  grass_1.tga  grass_2.tga  grass_3.tga  grass_4.tga  grass_5.tga  grass_6.tga  grass_7.tga  grass_8.tga  grass_9.tga  grass_a.tga  grass_b.tga  grass_c.tga  grass_d.tga
gl/src/09_Terrain/data/ground0/: ground.tga
gl/src/09_Terrain/data/ground1/: ground.tga  ground_0.tga  ground_1.tga  ground_2.tga  ground_3.tga  ground_4.tga  ground_5.tga  (+8 more)
gl/src/10_ShadowVolume/: 10_ShadowVolume.exp  10_ShadowVolume.lib  10_ShadowVolume.vcxproj  10_ShadowVolume.vcxproj.filters  main.c  mathlib.h  mesh.c  mesh.h  sv_mesh.c  sv_mesh.h
gl/src/10_ShadowVolume/data/: barrel.3ds  big_wire.3ds  box.3ds  computer.3ds  cooler.3ds  lcd.3ds  mesh.3ds  motor.3ds  room.3ds  shelf.3ds  staircase.3ds
gl/src/11_SoftShadows/: 11_SoftShadows.vcxproj  main.c
gl/src/12_SkinnedMesh/: 12_SkinnedMesh.vcxproj  12_SkinnedMesh.vcxproj.filters  loadmdc.c  main.c  mathlib.c  mathlib.h  skinnedmesh.c  skinnedmesh.h
gl/src/12_SkinnedMesh/data/: mesh.sm
gl/src/12_SkinnedMesh/script/: ExportSkinnedMesh.mzp
gl/src/13_ShadowMap/: 13_ShadowMap.vcxproj  13_ShadowMap.vcxproj.filters  font.c  font.h  loadmdc.h  loadtga.h  main.c  shadow.c  shadow.h  skinnedmesh.c
gl/src/13_ShadowMap/data/: gun.mdc  helmet.mdc  sphere.3ds
gl/src/Lord_Of_The_Rings/: config.vcxproj  config.vcxproj.filters  lotr.vcxproj  lotr.vcxproj.filters
gl/src/Lord_Of_The_Rings/entry/: Entry_Form.txt
misc/lib3ds-1.1.0/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in
misc/lib3ds-1.1.0/examples/: 3ds2m.c  3ds2rib.1  3ds2rib.c  3dsdump.c  3dsplay.1  3dsplay.c  Makefile.am  Makefile.in
misc/lib3ds-1.1.0/lib3ds/: Makefile.am  Makefile.in  atmosphere.c  background.c  camera.c  chunk.c  chunktable.h  file.c  light.c  material.c  mesh.c  node.c  readwrite.c  shadow.c  tcb.c  tracks.c  viewport.c
misc/lib3ds-1.1.0/msvc/: 3ds2m.dsp  3ds2rib.dsp  3dsdump.dsp  3dsplay.dsp  Makefile.am  Makefile.in  all.dsp  lib3ds.dsw  lib3ds_dll.dsp  lib3ds_lib.dsp
misc/lib3ds-1.1.0/vs2012/: 3ds2m.vcxproj  3ds2rib.vcxproj  3dsdump.vcxproj  3dsplay.vcxproj  all.vcxproj  lib3ds.sln  lib3ds_dll.vcxproj  lib3ds_dll.vcxproj.filters  lib3ds_lib.vcxproj  lib3ds_lib.vcxproj.filters
(+137 files in other folders)
